// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-avatar should render with _label="Erika Maria Mustermann" _src=undefined 1`] = `
<kol-avatar class="kol-avatar">
  <template shadowrootmode="open">
    <kol-avatar-wc class="kol-avatar-wc">
      <div aria-label="kol-avatar-alt" class="container" role="img">
        <span aria-hidden="true" class="initials">
          EM
        </span>
      </div>
    </kol-avatar-wc>
  </template>
</kol-avatar>
`;

exports[`kol-avatar should render with _label="Erika" _src="/image.webp" 1`] = `
<kol-avatar class="kol-avatar">
  <template shadowrootmode="open">
    <kol-avatar-wc class="kol-avatar-wc">
      <div aria-label="kol-avatar-alt" class="container" role="img">
        <img alt="" aria-hidden="true" class="image" src="/image.webp">
      </div>
    </kol-avatar-wc>
  </template>
</kol-avatar>
`;

exports[`kol-avatar should render with _label="Erika" _src=undefined 1`] = `
<kol-avatar class="kol-avatar">
  <template shadowrootmode="open">
    <kol-avatar-wc class="kol-avatar-wc">
      <div aria-label="kol-avatar-alt" class="container" role="img">
        <span aria-hidden="true" class="initials">
          E
        </span>
      </div>
    </kol-avatar-wc>
  </template>
</kol-avatar>
`;
